--- a/package.json
+++ b/package.json
@@ -30,18 +30,18 @@
     "skyhelper-networth": "^1.20.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@types/cors": "^2.8.17",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.8",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
     "esbuild": "^0.21.5",
-    "eslint": "8.57.0",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
     "tsx": "^4.15.7",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.14.1"
   }
 }
