--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
+    "http-status": "^1.7.4",
     "joi": "^17.13.3",
     "lilyweight": "^2.7.2",
     "rate-limit-redis": "^4.2.0",
