feat: Added redis and middlewares

--- a/config.example.json
+++ b/config.example.json
@@ -1,7 +1,7 @@
 {
-  "apikey": "",
-  "token": "",
+  "env": "development",
   "port": 3000,
   "proxied": false,
+  "apikey": "",
   "redis": ""
 }
