--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "ansi-regex": "^6.0.1",
     "axios": "^1.7.2",
     "axios-cache-interceptor": "^1.5.3",
     "chalk": "^5.3.0",
@@ -28,7 +29,10 @@
     "lilyweight": "^2.7.2",
     "rate-limit-redis": "^4.2.0",
     "redis": "^4.6.14",
-    "skyhelper-networth": "^1.20.0"
+    "skyhelper-networth": "^1.20.0",
+    "triple-beam": "^1.4.1",
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
