--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "http-status": "^1.7.4",
     "joi": "^17.13.3",
     "lilyweight": "^2.7.2",
+    "morgan": "^1.10.0",
     "rate-limit-redis": "^4.2.0",
     "redis": "^4.6.14",
     "skyhelper-networth": "^1.20.0",
@@ -39,6 +40,7 @@
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.8",
     "esbuild": "^0.21.5",
     "eslint": "^9.5.0",
