--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "@types/cors": "^2.8.17",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.9",
     "esbuild": "^0.21.5",
     "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
